--- a/client1/src/main/resources/static/index.html
+++ b/client1/src/main/resources/static/index.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Client1</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 </head>
 <body>
 <p>This is Client1</p>
+<button onclick="logout()">Logout</button>
+<a href="logout">Logout</a>
+<script>
+    function logout() {
+        $.post("logout", function() {
+        });
+    }
+</script>
 </body>
 </html>
