add  Remember Me

--- a/Auth/src/main/resources/static/index.html
+++ b/Auth/src/main/resources/static/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SSO</title>
+    <title>Auth</title>
 </head>
 <body>
-<p>This is AuthSSO</p>
+<p>This is AuthServer</p>
 </body>
 </html>
